# AgoraLink

./: .gitignore  AGENTS.md  AgoraLink.spec  CHANGELOG.md  README.md  README_AgoraLink_QQ_UI.md  README_AgoraLink_chat.md  README_AgoraLink_chat_store.md  allow_firewall_udp_9999_admin.bat  app_paths.py  app_services.py  build_requirements.txt  chat_cards.py  chat_crypto.py  chat_db.py  chat_store.py  client.py  config_migration.py  congestion.py  crypto.py  diagnostic_export.py  file_packaging.py  file_transfer_common.py  file_transfer_presenter.py  main_kivy.py  port_utils.py  process_utils.py  protocol.py  release_notes_v0.0.4.md  requirements.txt  rust-toolchain.toml  screen_capability.py  screen_control.py  screen_profile.py  screen_receiver.py  screen_runtime.py  screen_sender.py  screen_share_presenter.py  server.py  transfer_store.py  (+17 more)
docs/: R3_SOURCE_BASELINE_20260717.json  R3_SOURCE_BASELINE_20260717.txt  R4_CLIPPY_BASELINE_COMPARISON_20260717.md  R4_CLIPPY_RAW_20260717.txt  R4_CLIPPY_TEST_RAW_20260717.txt  R4_CODEBASE_AUDIT_20260717.json  R4_CODEBASE_AUDIT_20260717.md  R4_GUI_DUAL_HOST_SMOKE_20260720.txt  R4_GUI_PORTABLE_BASELINE_20260720.txt  R4_GUI_PORTABLE_IMPLEMENTATION_REPORT_20260720.json  R4_GUI_PORTABLE_IMPLEMENTATION_REPORT_20260720.md  R4_PR_BODY_20260720.md  (+21 more)
rust-native/agoralink_media/: Cargo.toml
rust-native/agoralink_media/src/: adaptive_quality.rs  async_mft_wait.rs  audio_capture_probe.rs  audio_timeline.rs  audio_udp.rs  av_sync.rs  bench_reassembly.rs  bgra_to_nv12.rs  bitrate.rs  callback_lifecycle.rs  capture_encode_probe.rs  capture_probe.rs  color_spec.rs  color_test_pattern.rs  d3d11_nv12_renderer.rs  decoded_frame_renderer.rs  display_capability.rs  encode_probe.rs  fec.rs  frame_rate_policy.rs  gpu_convert_probe.rs  gpu_nv12_capture.rs  h264_annex_b.rs  h264_file_viewer.rs  h264_reassembly.rs  h264_recv_dump.rs  h264_recv_view.rs  h264_send_probe.rs  local_control.rs  main.rs  media_clock.rs  media_control.rs  nv12_synthetic.rs  nv12_to_bgra.rs  playout_buffer.rs  profile_transition.rs  repair.rs  sender_scheduling.rs  shutdown.rs  udp_socket.rs  (+6 more)
(+45 files in other folders)
