[package]
name = "agoralink_media"
version = "0.1.0"
edition = "2021"

[profile.release]
debug = 1
strip = "none"

[profile.dev]
opt-level = 2

[dependencies]

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62.2", features = [
    "Foundation",
    "Graphics",
    "Graphics_Capture",
    "Graphics_DirectX",
    "Graphics_DirectX_Direct3D11",
    "Win32_Foundation",
    "Win32_Devices_FunctionDiscovery",
    "Win32_Devices_Display",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D_Fxc",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Gdi",
    "Win32_Media_Audio",
    "Win32_Media_MediaFoundation",
    "Win32_Networking_WinSock",
    "Win32_Security",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Ole",
    "Win32_System_Variant",
    "Win32_System_Console",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_System_WinRT",
    "Win32_System_WinRT_Direct3D11",
    "Win32_System_WinRT_Graphics_Capture",
    "Win32_UI_HiDpi",
    "Win32_UI_Shell_PropertiesSystem",
    "Win32_UI_WindowsAndMessaging",
] }
